Update project card achievements description

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ footer {
     <h3>C. デザインスキル</h3>
     <p><strong>概要：</strong>画像編集加工、3Dモデリング、3Dプリンタ、スライスソフト</p>
     <p><strong>使用技術：</strong>GIMP、Ultimaker Cura、DesignSparkMechanical、FDM式3Dプリンタ</p>
-    <p><strong>成果：</strong>オリジナルルアーの制作販売（店舗及びネットショップ）、リールスタンド（釣具カスタムパーツ）の設計開発と納品、SNS用画像編集 等</p>
+    <p><strong>成果：</strong>オリジナルルアーの制作販売（店舗及びネットショップ）、リールスタンド（釣具カスタムパーツ）の設計開発と納品、サムネイルやSNS用画像編集</p>
   </div>
 
 </section>
