--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ footer {
 </header>
 
 <section id="skills" data-aos="fade-up" data-aos-delay="400">
-  <h2>スキル一覧</h2>
+  <h2>プログラミングスキル一覧</h2>
 
   <div class="table-wrapper">
     <table>
@@ -152,7 +152,7 @@ footer {
       </tr>
       <tr>
         <td>その他</td>
-        <td>フルリモートワーク経験</td>
+        <td>他社とのフルリモートワーク経験有り</td>
         <td>あり</td>
       </tr>
     </table>
