Update remote work experience description

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ footer {
       </tr>
       <tr>
         <td>その他</td>
-        <td>他社とのフルリモートワーク経験有り</td>
+        <td>プログラミング業務外の他社フルリモートワーク経験有り</td>
         <td>あり</td>
       </tr>
     </table>
