Update remote work experience and project outcome details

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@ footer {
       </tr>
       <tr>
         <td>その他</td>
-        <td>プログラミング業務外の他社フルリモートワーク経験有り</td>
-        <td>あり</td>
+        <td>プログラミング業務外の他社フルリモートワーク経験</td>
+        <td>有</td>
       </tr>
     </table>
   </div>
@@ -167,7 +167,7 @@ footer {
     <h3>A. ソフトウェア開発スキル</h3>
     <p><strong>概要：</strong>Wixサイト構築、HTML/CSS/JavaScriptでの静的ページ作成</p>
     <p><strong>使用技術：</strong>HTML, CSS, JavaScript, VSCode, GitHub</p>
-    <p><strong>成果：</strong>WIX埋め込み用ページ、SEO、LLOM改善</p>
+    <p><strong>成果：</strong>WIX埋め込み用ページ、SEO、LLMO対策改善</p>
 
     <a class="button" href="https://gist.github.com/appvoss/e992a73256dfebe4b8e95d172f598121" target="_blank">GitHubを見る</a>
     <a class="button" href="https://www.aplamodel-fishing.com/" target="_blank">Webサイトを見る</a>
